I made the models, the computer made the rest. Go Team.

--- a/JobTracker/Views/Home/Index.cshtml
+++ b/JobTracker/Views/Home/Index.cshtml
@@ -13,9 +13,10 @@
     <div>
        <h2>LOOKE 4 SUM JOBZ SLAKUR! </h2>
     </div>
-} 
-@if (User == null)  {
+}
+else
+{
      <div>
-            <h2>HAI, LOEG IN TO ADD SUM JOBZ LOLZ</h2>
+            <h2>HAI, LOEG IN TO ADD SUM JOBZ</h2>
       </div>
 }
