--- a/JobTracker/Views/Shared/_Layout.cshtml
+++ b/JobTracker/Views/Shared/_Layout.cshtml
@@ -30,9 +30,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="CompanyModels" asp-action="Create">Add Company</a></li>
+                    <li><a asp-area="" asp-controller="ContactModels" asp-action="Create">Add Contact</a></li>
+                    <li><a asp-area="" asp-controller="JobModels" asp-action="Create">Add Job</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
